--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white_20">#34ffffff</color>
     <color name="white_50">#7bffffff</color>
     <color name="white_75">#b9ffffff</color>
+
+    <color name="black">#000000</color>
 </resources>
