--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_vertical_margin"
-            android:text="Grupo A"
+            android:text="@string/group_a"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_vertical_margin"
             android:layout_below="@id/dragListViewGroupA"
-            android:text="Grupo B"
+            android:text="@string/group_b"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/medium_vertical_margin"
             android:layout_below="@id/dragListViewGroupB"
-            android:text="Grupo C"
+            android:text="@string/group_c"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
@@ -57,6 +57,91 @@
         <com.woxthebox.draglistview.DragListView
             android:id="@+id/dragListViewGroupC"
             android:layout_below="@id/labelGroupC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/labelGroupD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_vertical_margin"
+            android:layout_below="@id/dragListViewGroupC"
+            android:text="@string/group_d"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <com.woxthebox.draglistview.DragListView
+            android:id="@+id/dragListViewGroupD"
+            android:layout_below="@id/labelGroupD"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/labelGroupE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_vertical_margin"
+            android:layout_below="@id/dragListViewGroupD"
+            android:text="@string/group_e"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <com.woxthebox.draglistview.DragListView
+            android:id="@+id/dragListViewGroupE"
+            android:layout_below="@id/labelGroupE"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/labelGroupF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_vertical_margin"
+            android:layout_below="@id/dragListViewGroupE"
+            android:text="@string/group_f"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <com.woxthebox.draglistview.DragListView
+            android:id="@+id/dragListViewGroupF"
+            android:layout_below="@id/labelGroupF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/labelGroupG"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_vertical_margin"
+            android:layout_below="@id/dragListViewGroupF"
+            android:text="@string/group_g"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <com.woxthebox.draglistview.DragListView
+            android:id="@+id/dragListViewGroupG"
+            android:layout_below="@id/labelGroupG"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/labelGroupH"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_vertical_margin"
+            android:layout_below="@id/dragListViewGroupG"
+            android:text="@string/group_h"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <com.woxthebox.draglistview.DragListView
+            android:id="@+id/dragListViewGroupH"
+            android:layout_below="@id/labelGroupH"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
