--- a/app/src/main/res/layout/item_groups.xml
+++ b/app/src/main/res/layout/item_groups.xml
@@ -26,4 +26,12 @@
         android:layout_toEndOf="@+id/teamIcon"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_centerVertical="true" />
+
+    <TextView
+        android:id="@+id/teamPosition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 </RelativeLayout>
