--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="white_75">#b9ffffff</color>
 
     <color name="black">#000000</color>
+    <color name="black_50">#7f000000</color>
 
     <color name="grey_100">#F5F5F5</color>
+    <color name="grey_300">#E0E0E0</color>
+    <color name="grey_500">#9E9E9E</color>
 </resources>
