--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,12 @@
         <item name="android:background">@drawable/default_button_selected</item>
         <item name="fontFamily">@font/montserrat_bold</item>
     </style>
+
+    <style name="Widget.EditForm" parent="android:Widget">
+        <item name="android:editTextColor">@android:color/black</item>
+        <item name="android:textColorHint">@color/black_50</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
 </resources>
