--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,148 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.HomeFragment">
 
-    <RelativeLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
+        app:elevation="0dp"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/labelGroupA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:text="@string/group_a"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
-
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupA"
-            android:layout_below="@id/labelGroupA"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/labelGroupB"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupA"
-            android:text="@string/group_b"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:textColor="@android:color/white"
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:id="@+id/toolbar_title" />
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupB"
-            android:layout_below="@id/labelGroupB"
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appBarLayout">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/labelGroupC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupB"
-            android:text="@string/group_c"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupA"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:text="@string/group_a"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupC"
-            android:layout_below="@id/labelGroupC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupA"
+                android:layout_below="@id/labelGroupA"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/labelGroupD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupC"
-            android:text="@string/group_d"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupA"
+                android:text="@string/group_b"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupD"
-            android:layout_below="@id/labelGroupD"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupB"
+                android:layout_below="@id/labelGroupB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/labelGroupE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupD"
-            android:text="@string/group_e"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupB"
+                android:text="@string/group_c"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupE"
-            android:layout_below="@id/labelGroupE"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupC"
+                android:layout_below="@id/labelGroupC"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/labelGroupF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupE"
-            android:text="@string/group_f"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupC"
+                android:text="@string/group_d"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupF"
-            android:layout_below="@id/labelGroupF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupD"
+                android:layout_below="@id/labelGroupD"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/labelGroupG"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupF"
-            android:text="@string/group_g"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupE"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupD"
+                android:text="@string/group_e"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupG"
-            android:layout_below="@id/labelGroupG"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupE"
+                android:layout_below="@id/labelGroupE"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/labelGroupH"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/medium_vertical_margin"
-            android:layout_below="@id/dragListViewGroupG"
-            android:text="@string/group_h"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/labelGroupF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupE"
+                android:text="@string/group_f"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-        <com.woxthebox.draglistview.DragListView
-            android:id="@+id/dragListViewGroupH"
-            android:layout_below="@id/labelGroupH"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-</android.support.v4.widget.NestedScrollView>
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupF"
+                android:layout_below="@id/labelGroupF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/labelGroupG"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupF"
+                android:text="@string/group_g"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupG"
+                android:layout_below="@id/labelGroupG"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/labelGroupH"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_vertical_margin"
+                android:layout_below="@id/dragListViewGroupG"
+                android:text="@string/group_h"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+
+            <com.woxthebox.draglistview.DragListView
+                android:id="@+id/dragListViewGroupH"
+                android:layout_below="@id/labelGroupH"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+</RelativeLayout>
